# mega_task_runner

./: .dockerignore  CONFIGURATION.md  Cargo.toml  DOCKER.md  Dockerfile  docker-compose.yml
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/configuration/: local.yaml
src/domain/: subscriber_email.rs
